--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts ",
     "start": "node build/server.js",
+    "lint": "eslint . --ext .ts",
     "build": "tsup src --out-dir build"
   },
   "keywords": [],
@@ -13,12 +14,24 @@
   "type": "commonjs",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "9.18.0",
     "@types/node": "^22.10.7",
+    "@typescript-eslint/eslint-plugin": "8.21.0",
+    "@typescript-eslint/parser": "8.21.0",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-plugin-prettier": "5.2.3",
+    "globals": "15.14.0",
+    "prettier": "3.4.2",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "8.21.0"
   },
   "dependencies": {
-    "fastify": "^5.2.1"
+    "dotenv": "16.4.7",
+    "fastify": "^5.2.1",
+    "uninstall": "0.0.0",
+    "zod": "3.24.1"
   }
 }
