--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "9.18.0",
+    "@prisma/client": "6.2.1",
     "@types/node": "^22.10.7",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
@@ -23,6 +24,7 @@
     "eslint-plugin-prettier": "5.2.3",
     "globals": "15.14.0",
     "prettier": "3.4.2",
+    "prisma": "6.2.1",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
