--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "typescript-eslint": "8.21.0"
   },
   "dependencies": {
+    "@types/bcryptjs": "2.4.6",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.4.7",
     "fastify": "^5.2.1",
     "uninstall": "0.0.0",
