--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint . --ext .ts",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "test:watch": "vitest"
   },
   "keywords": [],
@@ -21,6 +23,8 @@
     "@types/node": "^22.10.7",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
+    "@vitest/coverage-v8": "3.0.4",
+    "@vitest/ui": "3.0.4",
     "eslint": "8.57.1",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
