--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@types/bcryptjs": "2.4.6",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.13",
     "dotenv": "16.4.7",
     "fastify": "^5.2.1",
     "uninstall": "0.0.0",
