--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "dev": "tsx watch src/server.ts ",
     "start": "node build/server.js",
+    "test:create-prisma-enviroment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-enviroment": "npm link vitest-environment-prisma",
     "lint": "eslint . --ext .ts",
     "build": "tsup src --out-dir build",
     "test:e2e": "vitest run --project e2e",
+    "pretest:e2e": "run-s test:create-prisma-enviroment test:install-prisma-enviroment",
+    "test:unit": "vitest run --project unit",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "test:watch": "vitest"
@@ -29,6 +33,7 @@
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
     "globals": "15.14.0",
+    "npm-run-all": "4.1.5",
     "prettier": "3.4.2",
     "prisma": "6.2.1",
     "tsup": "^8.3.5",
