--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@eslint/js": "9.18.0",
     "@prisma/client": "6.3.0",
     "@types/node": "^22.10.7",
+    "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
     "@vitest/coverage-v8": "3.0.4",
@@ -35,6 +36,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "3.4.2",
     "prisma": "6.3.0",
+    "supertest": "7.0.0",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
