implementing token refresh

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vitest": "3.0.4"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
     "@fastify/jwt": "9.0.3",
     "@types/bcryptjs": "2.4.6",
     "bcryptjs": "2.4.3",
